[package]
name = "demux-rs"
version = "0.1.0"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
console = "0.6.2"
indicatif = "0.9.0"
tokio = { version = "0.1.0", features = ["async-await-preview"] }
tokio-async-await = "0.1.4"
hyper = "0.12.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
exonum-crypto = { git = "https://github.com/rozgo/exonum.git" }
